--- a/sass/main.scss
+++ b/sass/main.scss
@@ -23,6 +23,9 @@ $dark-secondary: #d35400;
 $green: #1abc9c;
 $dark-green: #16a085;
 
+$color-white: #fff;
+$color-dark: #000;
+
 
 @mixin border-radius($radius) {
   -webkit-border-radius: $radius;
@@ -69,21 +72,21 @@ $dark-green: #16a085;
 	padding-right: $y !important;
 }
 
-.active2 {
-	background: $secondary;
-	color: $color-white !important;
-	font-size: 1.3rem;
-	transform: translateX(3rem); 
-	font-weight: 600;
-	@include border-radius(5px);
-	@include padding-xy(.5rem,1rem );
-	@include transition(.3);
-	margin: 0 !important;
-	transform: none !important;
-}
-.active2:hover{
-	background: $dark-secondary !important;
-}
+// .active2 {
+// 	background: $secondary;
+// 	color: $color-white !important;
+// 	font-size: 1.3rem;
+// 	transform: translateX(3rem); 
+// 	font-weight: 600;
+// 	@include border-radius(5px);
+// 	@include padding-xy(.5rem,1rem );
+// 	@include transition(.3);
+// 	margin: 0 !important;
+// 	transform: none !important;
+// }
+// .active2:hover{
+// 	background: $dark-secondary !important;
+// }
 
 
 .fixed-top {
@@ -132,6 +135,157 @@ a {
 // 	color: rgba(0,0,0,.8);
 // 	font-weight: 400;
 // }
+
+//  *utilityClasses
+.oh{overflow: hidden !important;}
+.ml--2{margin-left: -2px;}
+.mr--2{margin-right: -2px;}
+.pt-1-added {padding-top: (3rem + 5.1625rem) !important;}
+.btn-secondary {
+	background: $dark-primary;
+	border: none;
+	border-radius: 50px;
+	padding: 15px 20px;
+	font-size: 1.2rem;
+	@include transition(.3s);
+}
+.btn-secondary:hover {
+	background: $dark-secondary;
+	transform: translateY(-3px);
+}
+.btn-secondary:active {transform: translateY(-1px);}
+.btn-secondary:focus {box-shadow: none;}
+.btn-secondary:visited {color: $white;}
+
+.card {
+	margin: 1rem;
+	padding: 1rem;
+	// position: relative;
+	// background: chartreuse;
+	text-align: center;
+	box-shadow: 5px 10px 15px #66666696;
+	.card-img {
+		// position: absolute;
+		width: 60%;
+		height: 60%;
+		padding: .5rem;
+		// background: chocolate;
+		margin: auto;
+		img {
+			display: block;
+			height: 100%;
+			width: 100%;
+			border-radius: 50%;
+			margin-bottom: .5rem;
+		}
+	}
+	.card-title{
+		display: block;
+		padding: 0rem;
+		margin: 0 1rem 0 1rem;
+		// background: red;
+		border-bottom: 1px solid #8d8d8d;
+	}
+	.card-specialties {
+		margin-top: 1.2rem;
+		h6 {
+			color: $dark-primary;
+			font-weight: 600;
+
+		}
+		p{
+			color: rgba($darken,.8);
+			font-weight: 500;
+			text-align: left;
+			margin-left: 1rem;
+			margin-bottom: 0;
+		}
+	}
+	.card-doctor-profile{
+		padding: 1rem 0 1rem 0;
+		.btn-primary{
+			background: $dark-primary;
+			// outline: none;
+			border: none;
+			width: 100%;
+			font-size: 1.2rem;
+			font-weight: 700;
+			border-radius: 0;
+			@include transition(.2s);
+		}
+		.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus{
+			box-shadow: none;
+		}
+		.btn-primary:hover {
+			background: $dark-secondary;
+			// outline: none;
+			// border: none;
+			box-shadow: none;
+			transform: translateY(-3px);
+		}
+		.btn-primary:active{
+			transform: translateY(-1px);
+		}
+		.btn-primary:focus {
+			box-shadow: none;
+			color: $white;
+			
+		}
+		.btn:focus{
+			box-shadow: none;
+			border: none;
+		}
+	}
+	.card-doctor-icons{
+		display: flex;
+		justify-content: space-between;
+		// padding: 0 1rem 0 1rem;
+		// width: 100%;
+		// background: rgb(10, 139, 43);
+		// padding: 1rem;
+		margin-top: -1rem;
+		
+
+		// a{
+		// 	width: 100%;
+		// 	padding: .5rem;
+		// 	color: $light-black;
+		// 	margin: .1rem;
+		// }
+
+		// a:not(:last-child){
+		// 	border-right: 1px solid #8d8d8d;
+		// }
+		// a:nth-child(2){
+		// 	// background: red;
+		// 	// padding: 2rem;
+		// 	border-left: 1px solid #8d8d8d;
+		// 	border-right: 1px solid #8d8d8d;
+		// }
+		div{
+			width: 100%;
+			padding: 1rem;
+			// margin: .1rem;
+			overflow: auto;
+			a{
+				color: $darken;
+				.fa-3x{
+					font-size: 1.5rem;
+				}
+			}
+			p{
+				font-size: .7rem;
+				margin-bottom: -.5rem;
+				font-weight: 600;
+			}
+			
+		}
+		div:not(:last-child){
+			border-right: 1px solid #8d8d8d;
+		}
+	}
+}
+
 
 .text-primary {
 	color: $primary!important;
@@ -183,7 +337,60 @@ a {
 	}
 	
 }
+.navbar{
+	.container {
+		.navbar-brand {
+			font-size: 2rem;
+			@include padding-y(.5rem)
+		}
+		.collapse {
+			.navbar-nav{
+				font-size: 1rem;
+				font-weight: 500;
+				.nav-item {
+					@include margin-y(.2rem);
+					.nav-link{
+						color: $darken;
+						// @include margin-x(.5rem)
+						font-size: 1.2rem;
+						font-weight: 500;
+						@include border-radius(5px)
+					}
+					// .nav-link:hover{
+					// 	background: $secondary;
+					// 	color: $color-white;
+					// 	// font-size: 1.1rem;
+					// 	// @include margin-x(0rem)
+					// 	transform: translateY(3px);
 
+					// }
+				}
+				// .nav-item::hover{
+				// 	background: $secondary !important;
+				// }
+				transform: translateX(2rem);
+			}
+			.form-inline{
+				// margin: 1rem;
+				// margin-right: -5rem;
+				.form-control{
+					// background: red;
+					box-shadow: none;
+				}
+				.btn{
+					box-shadow: none;
+					background: $dark-primary;
+					border: none;
+					font-size: 1rem;
+					font-weight: 600;
+				}
+				.btn:hover{
+					background: $dark-secondary;
+				}
+			}
+		}
+	}
+}
 // Home-slider
 #home-slider {
 	height: auto;
@@ -389,23 +596,18 @@ a {
 			background: #0bb288;
 			// background: $primary;
 			margin: -1px;
-	
 		}
 		.floatItem--conditions {
 			background: #646569;
 			// background: $secondary;
-
 			margin: -1px;
 		}
 		.floatItem--appointment {
 			background: #af976d;
 			// background: $primary;
 			margin: -1px;
-
 		}
-	}
-
-	
+	}	
 }
 // endOfFloat
 
@@ -414,10 +616,7 @@ a {
 	position: relative;
 	background: $bg-body;
 	padding: 12rem 5rem 10rem 5rem;
-	// padding: 0;
-	// margin: 0;
 	overflow: hidden;
-
 	.container{
 		overflow: hidden;
 		.row{
@@ -470,9 +669,226 @@ a {
 			}
 		}
 	}
-	
 }
 // endOfTest
+// Story
+.stores {
+	padding: 10rem 2rem;
+	position: relative;
+
+	.row{
+		width: 100%;
+	}
+	// background-color: burlywood;
+	.story{
+		width: 70%;
+		margin: 0 auto;
+		box-shadow: 0 3rem 6rem rgba($black ,  .1);
+		border-radius: 3px;
+		padding: 2rem 2rem 2rem 3rem;
+		transform: skewX(-12deg);
+		background-color: rgba(255, 255, 255, 0.8);
+		&-shape{
+			height: 10rem;
+			width: 10rem;
+			float: left;
+			// background-color: $dark-secondary;
+			margin: 0;
+			// margin-right: 1rem;
+			-wekit-shape-outside: circle(50% at 50% 50%);
+			shape-outside: circle(50% at 50% 50%);
+			-webkit-clip-path: circle(50% at 50% 50%);
+			clip-path: circle(50% at 50% 50%);
+			transform: translateX(-1rem) skewX(12deg);
+			position: relative;
+			overflow: hidden;
+		}
+		&-image {
+			 width: 100%;
+			 transform: scale(1.4);
+			 @include transition(.5s);
+		}
+		&-text {
+			transform: skewX(12deg);
+		}
+		&-caption{
+			position: absolute;
+			top: 50%;
+			left: 50%;
+			transform: translate(-50% , 30%);
+			font-weight: 600;
+			font-size: 1.7rem;
+			text-align: center;
+			color: floralwhite;
+			opacity: 0;
+			@include transition(.5s);
+		}
+		&:hover .story-caption{
+			opacity: 1;
+			transform: translate(-50% , -50%);
+		}
+		&:hover .story-image{
+			transform: scale(1);
+			filter: blur(5px) brightness(80%);
+		}
+		
+		
+	}
+	.bg-video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		z-index: -2;
+		opacity: .20;
+		overflow: hidden;
+		
+		&-content {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	
+	}
+	.bg-video2 {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		z-index: -1;
+		background-color: $dark-primary;
+		opacity: .15;
+		overflow: hidden;
+	
+	}
+}
+// endOfStory
+
+// About
+#about {
+	position: relative;
+	padding: 8rem 0rem;
+	// background-image: linear-gradient(to bottom , transparent ,$primary);
+	.about-card {
+		position: relative;
+		// background-image: 
+		// linear-gradient(90deg, rgba($dark-primary,1) 0%,rgba($dark-primary,1) 50%,transparent 50%) ,url(../../img/cfi.png);
+		// // background-size: 200%;  
+		// background-size: 100%;
+		// background-position: right;
+		// background-repeat: no-repeat;
+		box-shadow: 0 2rem 4rem rgba($color-dark, 0.4);
+		height: 40rem;
+		// display: none;
+		opacity: 1;
+		background: $white;
+		@include border-radius(5px);
+		overflow: hidden;
+		.bg{
+			height: 100%;
+			width: 50%;
+			float: left;
+			img {
+				height: 100%;
+				width: 100%;
+			}
+		}
+		.about-text {
+			// position: absolute;
+			// top: 0;
+			// left: 0;
+			color: $black;
+			width: 50%;
+			height: 100%;
+			float: right;
+			@include padding-y(1rem);
+			float: left;
+			direction: rtl;
+			text-align: -webkit-right;
+			// background: red;
+			transform: translateY(0%);
+			position: relative;
+			div{
+				position: absolute;
+				top: 50%;
+				left: 50%;
+				width: 80%;
+				transform: translate(-50% ,-50%);
+				h3{
+					// position: absolute;
+					font-size: 2rem;		
+					// // width: 80%;
+					margin-right: -1rem;
+					margin-bottom: 1rem;
+					font-weight: 600;
+					// top: 20%;
+					// right:  0;
+					// transform: translate(-50%,-50%);
+	
+				}
+				p{
+					// position: absolute;
+					font-size: 1.3rem;	
+					font-weight: 600;	
+					// width: 80%;
+					// top: 50%;
+					// left: 50%;
+					// transform: translate(-50%,-50%);
+				}
+			}
+			// h3{
+			// 	position: absolute;
+			// 	font-size: 2rem;		
+			// 	// width: 80%;
+			// 	top: 20%;
+			// 	right:  0;
+			// 	// transform: translate(-50%,-50%);
+
+			// }
+			// p{
+			// 	position: absolute;
+			// 	font-size: 1.3rem;		
+			// 	width: 80%;
+			// 	top: 50%;
+			// 	left: 50%;
+			// 	transform: translate(-50%,-50%);
+
+			// }
+		}
+	}
+	.bg-video {
+		position: absolute;
+		top: 0;
+		left: 0;
+		height: 100%;
+		width: 100%;
+		z-index: -2;
+		opacity: .30;
+		overflow: hidden;
+		
+		&-content {
+			width: 100%;
+			height: 100%;
+			object-fit: cover;
+		}
+	
+	}
+	// .bg-video2 {
+	// 	position: absolute;
+	// 	top: 0;
+	// 	left: 0;
+	// 	height: 100%;
+	// 	width: 100%;
+	// 	z-index: -1;
+	// 	background-color: $dark-primary;
+	// 	opacity: .15;
+	// 	overflow: hidden;
+	// 	// display: none;
+	// }
+}
+// endOfAbout
 
 // Footer
 .ftco-section {
@@ -488,6 +904,7 @@ a {
 .ftco-bg-dark {
 	background: #3c312e;
 }
+
 .ftco-footer {
 	font-size: 14px;
 	background: #141313;
@@ -639,6 +1056,7 @@ a {
 			}
 		}
 	}
+
 	.subscribe-form{
 		.form-group {
 			position: relative;
@@ -765,167 +1183,6 @@ a {
 		}
 	}
 }
-// endOfFooter
-
-
-
-
-
-
-
-
-
-//  *utilityClasses
-.oh{overflow: hidden !important;}
-.ml--2{margin-left: -2px;}
-.mr--2{margin-right: -2px;}
-.pt-1-added {padding-top: (3rem + 5.1625rem) !important;}
-.btn-secondary {
-	background: $dark-primary;
-	border: none;
-	border-radius: 50px;
-	padding: 15px 20px;
-	font-size: 1.2rem;
-	@include transition(.3s);
-}
-.btn-secondary:hover {
-	background: $dark-secondary;
-	transform: translateY(-3px);
-}
-.btn-secondary:active {transform: translateY(-1px);}
-.btn-secondary:focus {box-shadow: none;}
-.btn-secondary:visited {color: $white;}
-
-
-.card {
-	margin: 1rem;
-	padding: 1rem;
-	// position: relative;
-	// background: chartreuse;
-	text-align: center;
-	box-shadow: 5px 10px 15px #66666696;
-	.card-img {
-		// position: absolute;
-		width: 60%;
-		height: 60%;
-		padding: .5rem;
-		// background: chocolate;
-		margin: auto;
-		img {
-			display: block;
-			height: 100%;
-			width: 100%;
-			border-radius: 50%;
-			margin-bottom: .5rem;
-		}
-	}
-	.card-title{
-		display: block;
-		padding: 0rem;
-		margin: 0 1rem 0 1rem;
-		// background: red;
-		border-bottom: 1px solid #8d8d8d;
-	}
-	.card-specialties {
-		margin-top: 1.2rem;
-		h6 {
-			color: $dark-primary;
-			font-weight: 600;
-
-		}
-		p{
-			color: rgba($darken,.8);
-			font-weight: 500;
-			text-align: left;
-			margin-left: 1rem;
-			margin-bottom: 0;
-		}
-	}
-	.card-doctor-profile{
-		padding: 1rem 0 1rem 0;
-		.btn-primary{
-			background: $dark-primary;
-			// outline: none;
-			border: none;
-			width: 100%;
-			font-size: 1.2rem;
-			font-weight: 700;
-			border-radius: 0;
-			@include transition(.2s);
-		}
-		.btn-primary:not(:disabled):not(.disabled):active:focus, .btn-primary:not(:disabled):not(.disabled).active:focus, .show > .btn-primary.dropdown-toggle:focus{
-			box-shadow: none;
-		}
-		.btn-primary:hover {
-			background: $dark-secondary;
-			// outline: none;
-			// border: none;
-			box-shadow: none;
-			transform: translateY(-3px);
-		}
-		.btn-primary:active{
-			transform: translateY(-1px);
-		}
-		.btn-primary:focus {
-			box-shadow: none;
-			color: $white;
-			
-		}
-		.btn:focus{
-			box-shadow: none;
-			border: none;
-		}
-	}
-	.card-doctor-icons{
-		display: flex;
-		justify-content: space-between;
-		// padding: 0 1rem 0 1rem;
-		// width: 100%;
-		// background: rgb(10, 139, 43);
-		// padding: 1rem;
-		margin-top: -1rem;
-		
-
-		// a{
-		// 	width: 100%;
-		// 	padding: .5rem;
-		// 	color: $light-black;
-		// 	margin: .1rem;
-		// }
-
-		// a:not(:last-child){
-		// 	border-right: 1px solid #8d8d8d;
-		// }
-		// a:nth-child(2){
-		// 	// background: red;
-		// 	// padding: 2rem;
-		// 	border-left: 1px solid #8d8d8d;
-		// 	border-right: 1px solid #8d8d8d;
-		// }
-		div{
-			width: 100%;
-			padding: 1rem;
-			// margin: .1rem;
-			overflow: auto;
-			a{
-				color: $darken;
-				.fa-3x{
-					font-size: 1.5rem;
-				}
-			}
-			p{
-				font-size: .7rem;
-				margin-bottom: -.5rem;
-				font-weight: 600;
-			}
-			
-		}
-		div:not(:last-child){
-			border-right: 1px solid #8d8d8d;
-		}
-	}
-}
-
 .where {
 	.img-store{
 		display: flex;
@@ -935,264 +1192,8 @@ a {
 		}
 	}
 }
+// endOfFooter
 
-.stores {
-	padding: 10rem 2rem;
-	position: relative;
-
-	.row{
-		width: 100%;
-	}
-	// background-color: burlywood;
-	.story{
-		width: 70%;
-		margin: 0 auto;
-		box-shadow: 0 3rem 6rem rgba($black ,  .1);
-		border-radius: 3px;
-		padding: 2rem 2rem 2rem 3rem;
-		transform: skewX(-12deg);
-		background-color: rgba(255, 255, 255, 0.5);
-		&-shape{
-			height: 10rem;
-			width: 10rem;
-			float: left;
-			// background-color: $dark-secondary;
-			margin: 0;
-			// margin-right: 1rem;
-			-wekit-shape-outside: circle(50% at 50% 50%);
-			shape-outside: circle(50% at 50% 50%);
-			-webkit-clip-path: circle(50% at 50% 50%);
-			clip-path: circle(50% at 50% 50%);
-			transform: translateX(-1rem) skewX(12deg);
-			position: relative;
-			overflow: hidden;
-		}
-		&-image {
-			 width: 100%;
-			 transform: scale(1.4);
-			 @include transition(.5s);
-		}
-		&-text {
-			transform: skewX(12deg);
-		}
-		&-caption{
-			position: absolute;
-			top: 50%;
-			left: 50%;
-			transform: translate(-50% , 30%);
-			font-weight: 600;
-			font-size: 1.7rem;
-			text-align: center;
-			color: floralwhite;
-			opacity: 0;
-			@include transition(.5s);
-		}
-		&:hover .story-caption{
-			opacity: 1;
-			transform: translate(-50% , -50%);
-		}
-		&:hover .story-image{
-			transform: scale(1);
-			filter: blur(5px) brightness(80%);
-		}
-		
-		
-	}
-	.bg-video {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		z-index: -2;
-		opacity: .20;
-		overflow: hidden;
-		
-		&-content {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	
-	}
-	.bg-video2 {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		z-index: -1;
-		background-color: $dark-primary;
-		opacity: .15;
-		overflow: hidden;
-	
-	}
-}
-
-
-.navbar{
-	.container {
-		.navbar-brand {
-			font-size: 2rem;
-			@include padding-y(.5rem)
-		}
-		.collapse {
-			.navbar-nav{
-				font-size: 1rem;
-				font-weight: 500;
-				.nav-item {
-					@include margin-y(.2rem);
-					.nav-link{
-						color: $darken;
-						// @include margin-x(.5rem)
-						font-size: 1.2rem;
-						font-weight: 500;
-						@include border-radius(5px)
-					}
-					.nav-link:hover{
-						background: $secondary;
-						color: $color-white;
-						// font-size: 1.1rem;
-						// @include margin-x(0rem)
-						transform: translateY(3px);
-
-					}
-				}
-				// .nav-item::hover{
-				// 	background: $secondary !important;
-				// }
-				transform: translateX(2rem);
-			}
-			.form-inline{
-				// margin: 1rem;
-				// margin-right: -5rem;
-				.form-control{
-					// background: red;
-					box-shadow: none;
-				}
-				.btn{
-					box-shadow: none;
-					background: $dark-primary;
-					border: none;
-					font-size: 1rem;
-					font-weight: 600;
-				}
-				.btn:hover{
-					background: $dark-secondary;
-				}
-			}
-		}
-	}
-}
-$color-white: #fff;
-$color-dark: #000;
-
-#about {
-	position: relative;
-	padding: 8rem 0rem;
-	// background-image: linear-gradient(to bottom , transparent ,$primary);
-	.about-card {
-		// position: relative;
-		background-image: 
-		linear-gradient(100deg, rgba($light-primary,.8) 0%,rgba($dark-primary,.8) 60%,transparent 40%) ,url(../../img/nat-10.jpg);
-		background-size: 100%;  
-		background-size: cover;
-		box-shadow: 0 2rem 4rem rgba($color-dark, 0.2);
-		height: 40rem;
-		// display: none;
-		opacity: 0.9;
-		.about-text {
-			// position: absolute;
-			// top: 0;
-			// left: 0;
-			color: $bg-body;
-			width: 50%;
-			height: 100%;
-			@include padding-y(1rem);
-			float: left;
-			direction: rtl;
-			text-align: -webkit-right;
-			// background: red;
-			transform: translateY(0%);
-			position: relative;
-			div{
-				position: absolute;
-				top: 50%;
-				left: 50%;
-				width: 80%;
-				transform: translate(-50% ,-50%);
-				h3{
-					// position: absolute;
-					font-size: 2rem;		
-					// // width: 80%;
-					margin-right: -1rem;
-					margin-bottom: 1rem;
-					font-weight: 600;
-					// top: 20%;
-					// right:  0;
-					// transform: translate(-50%,-50%);
-	
-				}
-				p{
-					// position: absolute;
-					font-size: 1.3rem;	
-					font-weight: 600;	
-					// width: 80%;
-					// top: 50%;
-					// left: 50%;
-					// transform: translate(-50%,-50%);
-				}
-			}
-			// h3{
-			// 	position: absolute;
-			// 	font-size: 2rem;		
-			// 	// width: 80%;
-			// 	top: 20%;
-			// 	right:  0;
-			// 	// transform: translate(-50%,-50%);
-
-			// }
-			// p{
-			// 	position: absolute;
-			// 	font-size: 1.3rem;		
-			// 	width: 80%;
-			// 	top: 50%;
-			// 	left: 50%;
-			// 	transform: translate(-50%,-50%);
-
-			// }
-		}
-	}
-	.bg-video {
-		position: absolute;
-		top: 0;
-		left: 0;
-		height: 100%;
-		width: 100%;
-		z-index: -2;
-		opacity: .30;
-		overflow: hidden;
-		
-		&-content {
-			width: 100%;
-			height: 100%;
-			object-fit: cover;
-		}
-	
-	}
-	// .bg-video2 {
-	// 	position: absolute;
-	// 	top: 0;
-	// 	left: 0;
-	// 	height: 100%;
-	// 	width: 100%;
-	// 	z-index: -1;
-	// 	background-color: $dark-primary;
-	// 	opacity: .15;
-	// 	overflow: hidden;
-	// 	// display: none;
-	// }
-}
 
 @media (max-width: 1024px) { 
 	// #home-slider{
@@ -1207,7 +1208,9 @@ $color-dark: #000;
 	#about {
 		padding: 5rem;
 		.about-card {
-			background-image: linear-gradient(to right bottom, rgba($light-primary,.8),rgba($dark-primary,.8)) ,url(../../img/nat-10.jpg);
+			.bg{
+				display: none;
+			}
 			.about-text {
 				width: 100%;
 				div{
