--- a/style/css/style.css
+++ b/style/css/style.css
@@ -6911,31 +6911,6 @@ a.text-dark:hover, a.text-dark:focus {
     border-color: #dee2e6; } }
 
 /* top | right | bottom | left */
-.active2 {
-  background: #e67e22;
-  color: #fff !important;
-  font-size: 1.3rem;
-  transform: translateX(3rem);
-  font-weight: 600;
-  -webkit-border-radius: 5px;
-  -moz-border-radius: 5px;
-  -ms-border-radius: 5px;
-  border-radius: 5px;
-  padding-top: 0.5rem !important;
-  padding-bottom: 0.5rem !important;
-  padding-left: 1rem !important;
-  padding-right: 1rem !important;
-  -moz-transition: all 0.3 ease;
-  -o-transition: all 0.3 ease;
-  -webkit-transition: all 0.3 ease;
-  -ms-transition: all 0.3 ease;
-  transition: all 0.3 ease;
-  margin: 0 !important;
-  transform: none !important; }
-
-.active2:hover {
-  background: #d35400 !important; }
-
 .fixed-top {
   position: relative;
   top: 0;
@@ -6970,6 +6945,122 @@ a {
     text-decoration: none;
     color: #1b927a;
     outline: none !important; }
+
+.oh {
+  overflow: hidden !important; }
+
+.ml--2 {
+  margin-left: -2px; }
+
+.mr--2 {
+  margin-right: -2px; }
+
+.pt-1-added {
+  padding-top: 8.1625rem !important; }
+
+.btn-secondary {
+  background: #1b927a;
+  border: none;
+  border-radius: 50px;
+  padding: 15px 20px;
+  font-size: 1.2rem;
+  -moz-transition: all 0.3s ease;
+  -o-transition: all 0.3s ease;
+  -webkit-transition: all 0.3s ease;
+  -ms-transition: all 0.3s ease;
+  transition: all 0.3s ease; }
+
+.btn-secondary:hover {
+  background: #d35400;
+  transform: translateY(-3px); }
+
+.btn-secondary:active {
+  transform: translateY(-1px); }
+
+.btn-secondary:focus {
+  box-shadow: none; }
+
+.btn-secondary:visited {
+  color: #ecf0f1; }
+
+.card {
+  margin: 1rem;
+  padding: 1rem;
+  text-align: center;
+  box-shadow: 5px 10px 15px #66666696; }
+  .card .card-img {
+    width: 60%;
+    height: 60%;
+    padding: .5rem;
+    margin: auto; }
+    .card .card-img img {
+      display: block;
+      height: 100%;
+      width: 100%;
+      border-radius: 50%;
+      margin-bottom: .5rem; }
+  .card .card-title {
+    display: block;
+    padding: 0rem;
+    margin: 0 1rem 0 1rem;
+    border-bottom: 1px solid #8d8d8d; }
+  .card .card-specialties {
+    margin-top: 1.2rem; }
+    .card .card-specialties h6 {
+      color: #1b927a;
+      font-weight: 600; }
+    .card .card-specialties p {
+      color: rgba(58, 67, 72, 0.8);
+      font-weight: 500;
+      text-align: left;
+      margin-left: 1rem;
+      margin-bottom: 0; }
+  .card .card-doctor-profile {
+    padding: 1rem 0 1rem 0; }
+    .card .card-doctor-profile .btn-primary {
+      background: #1b927a;
+      border: none;
+      width: 100%;
+      font-size: 1.2rem;
+      font-weight: 700;
+      border-radius: 0;
+      -moz-transition: all 0.2s ease;
+      -o-transition: all 0.2s ease;
+      -webkit-transition: all 0.2s ease;
+      -ms-transition: all 0.2s ease;
+      transition: all 0.2s ease; }
+    .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled):active:focus, .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled).active:focus, .card .card-doctor-profile .show > .btn-primary.dropdown-toggle:focus {
+      box-shadow: none; }
+    .card .card-doctor-profile .btn-primary:hover {
+      background: #d35400;
+      box-shadow: none;
+      transform: translateY(-3px); }
+    .card .card-doctor-profile .btn-primary:active {
+      transform: translateY(-1px); }
+    .card .card-doctor-profile .btn-primary:focus {
+      box-shadow: none;
+      color: #ecf0f1; }
+    .card .card-doctor-profile .btn:focus {
+      box-shadow: none;
+      border: none; }
+  .card .card-doctor-icons {
+    display: flex;
+    justify-content: space-between;
+    margin-top: -1rem; }
+    .card .card-doctor-icons div {
+      width: 100%;
+      padding: 1rem;
+      overflow: auto; }
+      .card .card-doctor-icons div a {
+        color: #3a4348; }
+        .card .card-doctor-icons div a .fa-3x {
+          font-size: 1.5rem; }
+      .card .card-doctor-icons div p {
+        font-size: .7rem;
+        margin-bottom: -.5rem;
+        font-weight: 600; }
+    .card .card-doctor-icons div:not(:last-child) {
+      border-right: 1px solid #8d8d8d; }
 
 .text-primary {
   color: #0ec7a2 !important; }
@@ -7008,6 +7099,40 @@ a {
   .navbar .navbar-brand span,
   .navbar .navbar-brand:hover span {
     color: #1b927a; }
+
+.navbar .container .navbar-brand {
+  font-size: 2rem;
+  padding-left: 0.5rem !important;
+  padding-right: 0.5rem !important; }
+
+.navbar .container .collapse .navbar-nav {
+  font-size: 1rem;
+  font-weight: 500;
+  transform: translateX(2rem); }
+  .navbar .container .collapse .navbar-nav .nav-item {
+    margin-left: 0.2rem !important;
+    margin-right: 0.2rem !important; }
+    .navbar .container .collapse .navbar-nav .nav-item .nav-link {
+      color: #3a4348;
+      font-size: 1.2rem;
+      font-weight: 500;
+      -webkit-border-radius: 5px;
+      -moz-border-radius: 5px;
+      -ms-border-radius: 5px;
+      border-radius: 5px; }
+
+.navbar .container .collapse .form-inline .form-control {
+  box-shadow: none; }
+
+.navbar .container .collapse .form-inline .btn {
+  box-shadow: none;
+  background: #1b927a;
+  border: none;
+  font-size: 1rem;
+  font-weight: 600; }
+
+.navbar .container .collapse .form-inline .btn:hover {
+  background: #d35400; }
 
 #home-slider {
   height: auto;
@@ -7207,6 +7332,147 @@ a {
       #test .container .row .ms .btn-outline-white:not(:disabled):not(.disabled):active:focus, #test .container .row .ms .btn-outline-white:not(:disabled):not(.disabled).active:focus,
       #test .container .row .ms .show > .btn-outline-white.dropdown-toggle:focus {
         box-shadow: 0 0 0 0.2rem rgba(253, 225, 139, 0.5); }
+
+.stores {
+  padding: 10rem 2rem;
+  position: relative; }
+  .stores .row {
+    width: 100%; }
+  .stores .story {
+    width: 70%;
+    margin: 0 auto;
+    box-shadow: 0 3rem 6rem rgba(47, 54, 64, 0.1);
+    border-radius: 3px;
+    padding: 2rem 2rem 2rem 3rem;
+    transform: skewX(-12deg);
+    background-color: rgba(255, 255, 255, 0.8); }
+    .stores .story-shape {
+      height: 10rem;
+      width: 10rem;
+      float: left;
+      margin: 0;
+      -wekit-shape-outside: circle(50% at 50% 50%);
+      shape-outside: circle(50% at 50% 50%);
+      -webkit-clip-path: circle(50% at 50% 50%);
+      clip-path: circle(50% at 50% 50%);
+      transform: translateX(-1rem) skewX(12deg);
+      position: relative;
+      overflow: hidden; }
+    .stores .story-image {
+      width: 100%;
+      transform: scale(1.4);
+      -moz-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      -webkit-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+    .stores .story-text {
+      transform: skewX(12deg); }
+    .stores .story-caption {
+      position: absolute;
+      top: 50%;
+      left: 50%;
+      transform: translate(-50%, 30%);
+      font-weight: 600;
+      font-size: 1.7rem;
+      text-align: center;
+      color: floralwhite;
+      opacity: 0;
+      -moz-transition: all 0.5s ease;
+      -o-transition: all 0.5s ease;
+      -webkit-transition: all 0.5s ease;
+      -ms-transition: all 0.5s ease;
+      transition: all 0.5s ease; }
+    .stores .story:hover .story-caption {
+      opacity: 1;
+      transform: translate(-50%, -50%); }
+    .stores .story:hover .story-image {
+      transform: scale(1);
+      filter: blur(5px) brightness(80%); }
+  .stores .bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -2;
+    opacity: .20;
+    overflow: hidden; }
+    .stores .bg-video-content {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
+  .stores .bg-video2 {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -1;
+    background-color: #1b927a;
+    opacity: .15;
+    overflow: hidden; }
+
+#about {
+  position: relative;
+  padding: 8rem 0rem; }
+  #about .about-card {
+    position: relative;
+    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.4);
+    height: 40rem;
+    opacity: 1;
+    background: #ecf0f1;
+    -webkit-border-radius: 5px;
+    -moz-border-radius: 5px;
+    -ms-border-radius: 5px;
+    border-radius: 5px;
+    overflow: hidden; }
+    #about .about-card .bg {
+      height: 100%;
+      width: 50%;
+      float: left; }
+      #about .about-card .bg img {
+        height: 100%;
+        width: 100%; }
+    #about .about-card .about-text {
+      color: #2f3640;
+      width: 50%;
+      height: 100%;
+      float: right;
+      padding-left: 1rem !important;
+      padding-right: 1rem !important;
+      float: left;
+      direction: rtl;
+      text-align: -webkit-right;
+      transform: translateY(0%);
+      position: relative; }
+      #about .about-card .about-text div {
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        width: 80%;
+        transform: translate(-50%, -50%); }
+        #about .about-card .about-text div h3 {
+          font-size: 2rem;
+          margin-right: -1rem;
+          margin-bottom: 1rem;
+          font-weight: 600; }
+        #about .about-card .about-text div p {
+          font-size: 1.3rem;
+          font-weight: 600; }
+  #about .bg-video {
+    position: absolute;
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    z-index: -2;
+    opacity: .30;
+    overflow: hidden; }
+    #about .bg-video-content {
+      width: 100%;
+      height: 100%;
+      object-fit: cover; }
 
 .ftco-section {
   padding: 7rem 0;
@@ -7423,302 +7689,19 @@ a {
     .block-21 .text .meta > div a {
       color: #acb5c2; }
 
-.oh {
-  overflow: hidden !important; }
-
-.ml--2 {
-  margin-left: -2px; }
-
-.mr--2 {
-  margin-right: -2px; }
-
-.pt-1-added {
-  padding-top: 8.1625rem !important; }
-
-.btn-secondary {
-  background: #1b927a;
-  border: none;
-  border-radius: 50px;
-  padding: 15px 20px;
-  font-size: 1.2rem;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -webkit-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease; }
-
-.btn-secondary:hover {
-  background: #d35400;
-  transform: translateY(-3px); }
-
-.btn-secondary:active {
-  transform: translateY(-1px); }
-
-.btn-secondary:focus {
-  box-shadow: none; }
-
-.btn-secondary:visited {
-  color: #ecf0f1; }
-
-.card {
-  margin: 1rem;
-  padding: 1rem;
-  text-align: center;
-  box-shadow: 5px 10px 15px #66666696; }
-  .card .card-img {
-    width: 60%;
-    height: 60%;
-    padding: .5rem;
-    margin: auto; }
-    .card .card-img img {
-      display: block;
-      height: 100%;
-      width: 100%;
-      border-radius: 50%;
-      margin-bottom: .5rem; }
-  .card .card-title {
-    display: block;
-    padding: 0rem;
-    margin: 0 1rem 0 1rem;
-    border-bottom: 1px solid #8d8d8d; }
-  .card .card-specialties {
-    margin-top: 1.2rem; }
-    .card .card-specialties h6 {
-      color: #1b927a;
-      font-weight: 600; }
-    .card .card-specialties p {
-      color: rgba(58, 67, 72, 0.8);
-      font-weight: 500;
-      text-align: left;
-      margin-left: 1rem;
-      margin-bottom: 0; }
-  .card .card-doctor-profile {
-    padding: 1rem 0 1rem 0; }
-    .card .card-doctor-profile .btn-primary {
-      background: #1b927a;
-      border: none;
-      width: 100%;
-      font-size: 1.2rem;
-      font-weight: 700;
-      border-radius: 0;
-      -moz-transition: all 0.2s ease;
-      -o-transition: all 0.2s ease;
-      -webkit-transition: all 0.2s ease;
-      -ms-transition: all 0.2s ease;
-      transition: all 0.2s ease; }
-    .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled):active:focus, .card .card-doctor-profile .btn-primary:not(:disabled):not(.disabled).active:focus, .card .card-doctor-profile .show > .btn-primary.dropdown-toggle:focus {
-      box-shadow: none; }
-    .card .card-doctor-profile .btn-primary:hover {
-      background: #d35400;
-      box-shadow: none;
-      transform: translateY(-3px); }
-    .card .card-doctor-profile .btn-primary:active {
-      transform: translateY(-1px); }
-    .card .card-doctor-profile .btn-primary:focus {
-      box-shadow: none;
-      color: #ecf0f1; }
-    .card .card-doctor-profile .btn:focus {
-      box-shadow: none;
-      border: none; }
-  .card .card-doctor-icons {
-    display: flex;
-    justify-content: space-between;
-    margin-top: -1rem; }
-    .card .card-doctor-icons div {
-      width: 100%;
-      padding: 1rem;
-      overflow: auto; }
-      .card .card-doctor-icons div a {
-        color: #3a4348; }
-        .card .card-doctor-icons div a .fa-3x {
-          font-size: 1.5rem; }
-      .card .card-doctor-icons div p {
-        font-size: .7rem;
-        margin-bottom: -.5rem;
-        font-weight: 600; }
-    .card .card-doctor-icons div:not(:last-child) {
-      border-right: 1px solid #8d8d8d; }
-
 .where .img-store {
   display: flex; }
   .where .img-store img {
     width: 30%;
     margin-left: 1rem; }
 
-.stores {
-  padding: 10rem 2rem;
-  position: relative; }
-  .stores .row {
-    width: 100%; }
-  .stores .story {
-    width: 70%;
-    margin: 0 auto;
-    box-shadow: 0 3rem 6rem rgba(47, 54, 64, 0.1);
-    border-radius: 3px;
-    padding: 2rem 2rem 2rem 3rem;
-    transform: skewX(-12deg);
-    background-color: rgba(255, 255, 255, 0.5); }
-    .stores .story-shape {
-      height: 10rem;
-      width: 10rem;
-      float: left;
-      margin: 0;
-      -wekit-shape-outside: circle(50% at 50% 50%);
-      shape-outside: circle(50% at 50% 50%);
-      -webkit-clip-path: circle(50% at 50% 50%);
-      clip-path: circle(50% at 50% 50%);
-      transform: translateX(-1rem) skewX(12deg);
-      position: relative;
-      overflow: hidden; }
-    .stores .story-image {
-      width: 100%;
-      transform: scale(1.4);
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
-      -webkit-transition: all 0.5s ease;
-      -ms-transition: all 0.5s ease;
-      transition: all 0.5s ease; }
-    .stores .story-text {
-      transform: skewX(12deg); }
-    .stores .story-caption {
-      position: absolute;
-      top: 50%;
-      left: 50%;
-      transform: translate(-50%, 30%);
-      font-weight: 600;
-      font-size: 1.7rem;
-      text-align: center;
-      color: floralwhite;
-      opacity: 0;
-      -moz-transition: all 0.5s ease;
-      -o-transition: all 0.5s ease;
-      -webkit-transition: all 0.5s ease;
-      -ms-transition: all 0.5s ease;
-      transition: all 0.5s ease; }
-    .stores .story:hover .story-caption {
-      opacity: 1;
-      transform: translate(-50%, -50%); }
-    .stores .story:hover .story-image {
-      transform: scale(1);
-      filter: blur(5px) brightness(80%); }
-  .stores .bg-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -2;
-    opacity: .20;
-    overflow: hidden; }
-    .stores .bg-video-content {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-  .stores .bg-video2 {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -1;
-    background-color: #1b927a;
-    opacity: .15;
-    overflow: hidden; }
-
-.navbar .container .navbar-brand {
-  font-size: 2rem;
-  padding-left: 0.5rem !important;
-  padding-right: 0.5rem !important; }
-
-.navbar .container .collapse .navbar-nav {
-  font-size: 1rem;
-  font-weight: 500;
-  transform: translateX(2rem); }
-  .navbar .container .collapse .navbar-nav .nav-item {
-    margin-left: 0.2rem !important;
-    margin-right: 0.2rem !important; }
-    .navbar .container .collapse .navbar-nav .nav-item .nav-link {
-      color: #3a4348;
-      font-size: 1.2rem;
-      font-weight: 500;
-      -webkit-border-radius: 5px;
-      -moz-border-radius: 5px;
-      -ms-border-radius: 5px;
-      border-radius: 5px; }
-    .navbar .container .collapse .navbar-nav .nav-item .nav-link:hover {
-      background: #e67e22;
-      color: #fff;
-      transform: translateY(3px); }
-
-.navbar .container .collapse .form-inline .form-control {
-  box-shadow: none; }
-
-.navbar .container .collapse .form-inline .btn {
-  box-shadow: none;
-  background: #1b927a;
-  border: none;
-  font-size: 1rem;
-  font-weight: 600; }
-
-.navbar .container .collapse .form-inline .btn:hover {
-  background: #d35400; }
-
-#about {
-  position: relative;
-  padding: 8rem 0rem; }
-  #about .about-card {
-    background-image: linear-gradient(100deg, rgba(35, 241, 180, 0.8) 0%, rgba(27, 146, 122, 0.8) 60%, transparent 40%), url(../../img/nat-10.jpg);
-    background-size: 100%;
-    background-size: cover;
-    box-shadow: 0 2rem 4rem rgba(0, 0, 0, 0.2);
-    height: 40rem;
-    opacity: 0.9; }
-    #about .about-card .about-text {
-      color: #f0f0f0;
-      width: 50%;
-      height: 100%;
-      padding-left: 1rem !important;
-      padding-right: 1rem !important;
-      float: left;
-      direction: rtl;
-      text-align: -webkit-right;
-      transform: translateY(0%);
-      position: relative; }
-      #about .about-card .about-text div {
-        position: absolute;
-        top: 50%;
-        left: 50%;
-        width: 80%;
-        transform: translate(-50%, -50%); }
-        #about .about-card .about-text div h3 {
-          font-size: 2rem;
-          margin-right: -1rem;
-          margin-bottom: 1rem;
-          font-weight: 600; }
-        #about .about-card .about-text div p {
-          font-size: 1.3rem;
-          font-weight: 600; }
-  #about .bg-video {
-    position: absolute;
-    top: 0;
-    left: 0;
-    height: 100%;
-    width: 100%;
-    z-index: -2;
-    opacity: .30;
-    overflow: hidden; }
-    #about .bg-video-content {
-      width: 100%;
-      height: 100%;
-      object-fit: cover; }
-
 @media (max-width: 991.98px) {
   #about {
     padding: 5rem; }
-    #about .about-card {
-      background-image: linear-gradient(to right bottom, rgba(35, 241, 180, 0.8), rgba(27, 146, 122, 0.8)), url(../../img/nat-10.jpg); }
-      #about .about-card .about-text {
-        width: 100%; }
+    #about .about-card .bg {
+      display: none; }
+    #about .about-card .about-text {
+      width: 100%; }
   #test {
     padding: 0; }
     #test .container {
